# farra_cpp_starter

./: .gitignore  CMakeLists.txt  conanfile.txt
.github/workflows/: install.yml
benchmark/: CMakeLists.txt
benchmark/source/: main.cpp
scripts/: build.py
standalone/: CMakeLists.txt
test/: CMakeLists.txt
